FE Resetpassword and ForgetPassword

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
     "antd": "^5.27.4",
     "next": "15.5.2",
     "react": "19.1.0",
